--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Amithchintu/-Numpy_Assignment/blob/main/Numpy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -96,7 +107,7 @@
         "id": "xGZV5P94cASn",
         "outputId": "4633fe64-e27b-4f66-e126-9bcd2b09eab7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +252,7 @@
         "id": "JI0ZckAueAvZ",
         "outputId": "6f04d984-8868-46ff-c1ea-eb0d06e71831"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +371,7 @@
         "id": "BTosf1qcfcPx",
         "outputId": "9a842b57-d04f-427a-cff4-fbb3a5e819d9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +446,7 @@
         "id": "Kzev_cMHfe48",
         "outputId": "f88a1139-b8c3-4cd6-b680-c13d4c0740a0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +519,7 @@
         "id": "VeCF7Q8ngk86",
         "outputId": "4ba74b3c-a594-406a-d86b-84b23e6a8167"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +566,7 @@
         "id": "nNsDS-WboAC2",
         "outputId": "21fe69ee-8e9a-4dfa-8874-58c654b753e0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +618,7 @@
         "id": "kz13QYH6oZIg",
         "outputId": "6ada1a2d-0ce7-46d4-ea72-0cf4dde19976"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +678,7 @@
         "id": "dQi7o9s1o6mG",
         "outputId": "1bf35c51-d99d-4ff5-833b-89989b7fb976"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +736,7 @@
         "id": "XnuvaZMRpbb7",
         "outputId": "f389a935-5866-44c1-9b29-c4163142f685"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +787,7 @@
         "id": "GLANQ44bp4_Z",
         "outputId": "43d1205c-e22b-496c-a744-296ad6340a12"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
